--- a/page.HTML
+++ b/page.HTML
@@ -1,3 +1,6 @@
-<body>
-    <h4>Sean LaNeave</h4>
-</body>
+<!DOCTYPE html>
+<htlm>
+    <body>
+        <h4>Sean LaNeave</h4>
+    </body>
+</htlm>
